# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:

2014-06-16 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fixes for closing a connection in the response of a websocket_connect
      in cloudi_service_http_cowboy
    * Fixes for using hidden nodes
    * Fix the python CloudI API cloudi_c.mcast_async return for no destinations
    * Update cpg

2014-06-14 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add the service request response to a websocket connection close

2014-05-31 Michael Truog   <mjtruog [at] gmail (dot) com>

    * CloudI version 1.3.2 (beta) released
    * Update erlang_cassandra and erlasticsearch (ES >= 1.x)
    * Update thrift
    * Fix lager and goldrush dependencies
    * Update documentation

2014-05-30 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add a test to the cloudi_service_db_pgsql ct test

2014-05-30 Drew Varner     <drew.varner [at] ninefx (dot) com>

    * Fix the service application include file type spec

2014-05-29 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Improvement for websocket_subscriptions in cloudi_service_http_cowboy

2014-05-28 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add the websocket_subscriptions configuration parameter to
      cloudi_service_http_cowboy
    * Add the functions cloudi_service:service_name_new/2 and
      cloudi_service:service_name_new/4

2014-05-28 Drew Varner     <drew.varner [at] ninefx (dot) com>

    * Add javadocs comments to the Java CloudI API

2014-05-27 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix cloudi_service_api functions service_subscriptions/2 and
      services_search/2 for services that use duo_mode set to true
    * Improve the internal service cloudi_service_terminate function
      execution time limit enforcement
    * Fix cloudi_service_http_cowboy bug during cloudi_service_init validation

2014-05-23 Michael Truog   <mjtruog [at] gmail (dot) com>
