@@ -1,6 +1,11 @@
 # -*- coding: utf-8; tab-width: 4; -*-
 # ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:
 
+2014-06-19 Michael Truog   <mjtruog [at] gmail (dot) com>
+
+    * Add websocket_output configuration argument to
+      cloudi_service_http_cowboy
+
 2014-06-16 Michael Truog   <mjtruog [at] gmail (dot) com>
 
     * Fixes for closing a connection in the response of a websocket_connect
